# vsthost

./: .gitignore  CMakeLists.txt  README.md  abstracttimelineeditor.cpp  abstracttimelineeditor.h  arpeggiator.h  arpeggiatorpreviewservice.cpp  arpeggiatorpreviewservice.h  base64.cpp  common.h  historymanager.cpp  historymanager.h  imgui.ini  imgui_impl_win32_gl2.cpp  imgui_impl_win32_gl2.h  imguiutils.cpp  imguiutils.h  inspectorwindow.cpp  inspectorwindow.h  instrument.cpp  instrument.h  itrack.h  itracksmanager.h  ivstpluginloader.h  ivstpluginservice.h  main.cpp  midievent.cpp  midievent.h  midinote.cpp  midinote.h  minimal_vst2x_host.cpp  notepreviewservice.cpp  notepreviewservice.h  noteseditor.cpp  noteseditor.h  pianowindow.cpp  pianowindow.h  region.cpp  region.h  state.cpp  (+19 more)
include/: instrument.h  ipluginservice.h  itracksmanager.h  ivstpluginservice.h  midicontrollers.h  midinote.h  pluginservice.h  region.h  song.h  track.h  tracksmanager.h  tracksserializer.h  vstplugin.h  widestringconversions.hpp  win32vstpluginservice.h
src/: abstracttimelineeditor.cpp  abstracttimelineeditor.h  arpeggiator.cpp  arpeggiator.h  arpeggiatorpreviewservice.cpp  arpeggiatorpreviewservice.h  historymanager.cpp  historymanager.h  imgui_impl_win32_gl2.cpp  imgui_impl_win32_gl2.h  imguiutils.cpp  imguiutils.h  inspectorwindow.cpp  inspectorwindow.h  main.cpp  minimal_vst2x_host.cpp  notepreviewservice.cpp  notepreviewservice.h  noteseditor.cpp  noteseditor.h  pianowindow.cpp  pianowindow.h  state.cpp  state.h  trackseditor.cpp  trackseditor.h  wasapi.cpp  wasapi.h  widestringconversions.cpp
src/tracks-domain/: base64.cpp  base64.h  instrument.cpp  midievent.cpp  midinote.cpp  pluginservice.cpp  song.cpp  track.cpp  tracksmanager.cpp  tracksserializer.cpp  vstplugin.cpp  win32vstpluginservice.cpp
src/ui/: abstracttimelineeditor.cpp  abstracttimelineeditor.h  docs.md  inspectorwindow.cpp  inspectorwindow.h  noteseditor.cpp  noteseditor.h  pianowindow.cpp  pianowindow.h  trackseditor.cpp  trackseditor.h
